--- a/templates/alternatives.html
+++ b/templates/alternatives.html
@@ -120,105 +120,103 @@
 		<!--=== End Breadcrumbs ===-->
 
 		<!--=== Content Part ===-->
-		<div class="container content">
-			<div class="row blog-page">
-					<!--Inversed and Rounded Buttons-->
-					<div class="row brand-page margin-bottom-40">
-						<div class="col-sm-6 col-md-3">
-							<a href="#fishing">
-								<button class="btn btn-block btn-html5-inversed rounded" >Balıkcılık</button>
-							</a>
-						</div>
-						<div class="col-sm-6 col-md-3">
-							<a href="#camping">
-							<button class="btn btn-block btn-html5-inversed rounded">Orman Kampı
-							</button>
-							</a>
-						</div>
-						<div class="col-sm-6 col-md-3">
-							<a href="#parachute">
-							<button class="btn btn-block btn-html5-inversed rounded">Yamaç Paraşütü
-							</button>
-							</a>
-						</div>
-						<div class="col-sm-6 col-md-3">
-							<a href="#tracking">
-							<button class="btn btn-block btn-html5-inversed rounded">Treking
-							</button>
-							</a>
-						</div>
-						<div class="col-sm-6 col-md-3">
-							<a href="#mountainhotel">
-							<button class="btn btn-block btn-html5-inversed rounded">Dağ Oteli
-							</button>
-							</a>
-						</div>
-						<div class="col-sm-6 col-md-3">
-							<a href="#cave">
-							<button class="btn btn-block btn-html5-inversed rounded">Mağara Gezisi
-							</button>
-							</a>
-						</div>
-						<div class="col-sm-6 col-md-3">
-							<a href="#horsebackriding">
-							<button class="btn btn-block btn-html5-inversed rounded">At Binicilik
-							</button>
-						</div>
-						<div class="col-sm-6 col-md-3">
-							<a href="#pyramit">
-							<button class="btn btn-block btn-html5-inversed rounded">Piramitler
-							</button>
-							</a>
-						</div>
-						<div class="col-sm-6 col-md-3">
-							<a href="#iceskating">
-							<button class="btn btn-block btn-html5-inversed rounded">Buz Pateni
-							</button>
-							</a>
-						</div>
-						<div class="col-sm-6 col-md-3">
-							<a href="#skiing">
-							<button class="btn btn-block btn-html5-inversed rounded">Kayak
-							</button>
-							</a>
-						</div>
-						<div class="col-sm-6 col-md-3">
-							<a href="#rafting">
-							<button class="btn btn-block btn-html5-inversed rounded">Rafting
-							</button>
-							</a>
-						</div>
-						<div class="col-sm-6 col-md-3">
-							<a href="#titosbanker">
-							<button class="btn btn-block btn-html5-inversed rounded">Tito'nun Sığınağı
-							</button>
-							</a>
-						</div>
-						<div class="col-sm-6 col-md-3">
-							<a href="#donkey">
-							<button class="btn btn-block btn-html5-inversed rounded">Eşek Çiftliği
-							</button>
-							</a>
-						</div>
-						<div class="col-sm-6 col-md-3">
-							<a href="#sosvillage">
-							<button class="btn btn-block btn-html5-inversed rounded">SOS Köyü
-							</button>
-							</a>
-						</div>
-						<div class="col-sm-6 col-md-3">
-							<a href="#termal">
-							<button class="btn btn-block btn-html5-inversed rounded">Kaplıca
-							</button>
-							</a>
-						</div>
-					</div>
-					<!--Inversed and Rounded Buttons-->
+					<!-- News v2 Gray -->
+			<div class="container content-md">
 
 				<!-- Left Sidebar -->
 				<div class="col-md-12 md-margin-bottom-40">
-					<!-- News v2 Gray -->
-					<div class="container content-md">
+						<!--Inversed and Rounded Buttons-->
+						<div class="row brand-page margin-bottom-40">
+							<div class="col-sm-6 col-md-3">
+								<a href="#fishing">
+									<button class="btn btn-block btn-html5-inversed rounded" >Balıkcılık</button>
+								</a>
+							</div>
+							<div class="col-sm-6 col-md-3">
+								<a href="#camping">
+								<button class="btn btn-block btn-html5-inversed rounded">Orman Kampı
+								</button>
+								</a>
+							</div>
+							<div class="col-sm-6 col-md-3">
+								<a href="#parachute">
+								<button class="btn btn-block btn-html5-inversed rounded">Yamaç Paraşütü
+								</button>
+								</a>
+							</div>
+							<div class="col-sm-6 col-md-3">
+								<a href="#tracking">
+								<button class="btn btn-block btn-html5-inversed rounded">Treking
+								</button>
+								</a>
+							</div>
+							<div class="col-sm-6 col-md-1">
+								<a href="#rafting">
+								<button class="btn btn-block btn-html5-inversed rounded">Rafting
+								</button>
+								</a>
+							</div>
+							<div class="col-sm-6 col-md-1">
+								<a href="#skiing">
+								<button class="btn btn-block btn-html5-inversed rounded">Kayak
+								</button>
+								</a>
+							</div>
+							<div class="col-sm-6 col-md-3">
+								<a href="#mountainhotel">
+								<button class="btn btn-block btn-html5-inversed rounded">Dağ Oteli
+								</button>
+								</a>
+							</div>
+							<div class="col-sm-6 col-md-2">
+								<a href="#cave">
+								<button class="btn btn-block btn-html5-inversed rounded">Mağara Gezisi
+								</button>
+								</a>
+							</div>
+							<div class="col-sm-6 col-md-3">
+								<a href="#horsebackriding">
+								<button class="btn btn-block btn-html5-inversed rounded">At Binicilik
+								</button>
+							</div>
+							<div class="col-sm-6 col-md-2">
+								<a href="#pyramit">
+								<button class="btn btn-block btn-html5-inversed rounded">Piramitler
+								</button>
+								</a>
+							</div>
+							<div class="col-sm-6 col-md-3">
+								<a href="#iceskating">
+								<button class="btn btn-block btn-html5-inversed rounded">Buz Pateni
+								</button>
+								</a>
+							</div>
+							<div class="col-sm-6 col-md-3">
+								<a href="#titosbanker">
+								<button class="btn btn-block btn-html5-inversed rounded">Tito'nun Sığınağı
+								</button>
+								</a>
+							</div>
+							<div class="col-sm-6 col-md-2">
+								<a href="#donkey">
+								<button class="btn btn-block btn-html5-inversed rounded">Eşek Çiftliği
+								</button>
+								</a>
+							</div>
+							<div class="col-sm-6 col-md-2">
+								<a href="#sosvillage">
+								<button class="btn btn-block btn-html5-inversed rounded">SOS Köyü
+								</button>
+								</a>
+							</div>
+							<div class="col-sm-6 col-md-2">
+								<a href="#termal">
+								<button class="btn btn-block btn-html5-inversed rounded">Kaplıca
+								</button>
+								</a>
+							</div>
+						</div>
+						<!--Inversed and Rounded Buttons-->
 						<div class="row news-v2">
 							<div class="col-md-4 sm-margin-bottom-30">
 								<div class="news-v2-badge" id="fishing">
@@ -432,9 +430,10 @@
 
 				</div>
 				<!-- End Left Sidebar -->
-			</div><!--/row-->
-		</div><!--/container-->
+
 		<!--=== End Content Part ===-->
+
+
 
 		<!--=== Footer Version 1 ===-->
 		<div class="footer-v1">
@@ -444,49 +443,49 @@
 						<!-- About -->
 						<div class="col-md-3 md-margin-bottom-40">
 							<a href="/"><img id="logo-footer" class="footer-logo" src="{% static "img/logo2-default.png"%}" alt=""></a>
-							<p>Bright Travel is always looking for ways to satisfy its customers</p>
+							<h4>BRIGHT TOURS</h4>
+							<p>Size Bosna Hersek ve Balkanlarda en güzel tatili geçirmenizi sağlayacağız.</p>
 						</div><!--/col-md-3-->
 						<!-- End About -->
 
 						<!-- Link List -->
 						<div class="col-md-3 md-margin-bottom-40">
-							<div class="headline"><h2>Alternatives</h2></div>
+							<div class="headline"><h2>ALTERNATİF TURLAR</h2></div>
 							<ul class="list-unstyled link-list">
-								<li><a href="#">Rafting</a><i class="fa fa-angle-right"></i></li>
-								<li><a href="#">Skiing</a><i class="fa fa-angle-right"></i></li>
-								<li><a href="#">Pyramids Tour</a><i class="fa fa-angle-right"></i></li>
-								<li><a href="#">Rent a Car</a><i class="fa fa-angle-right"></i></li>
-								<li><a href="#">Horseback Riding</a><i class="fa fa-angle-right"></i></li>
+								<li><a href="/alternatives">Rafting</a><i class="fa fa-angle-right"></i></li>
+								<li><a href="/alternatives">Kayak</a><i class="fa fa-angle-right"></i></li>
+								<li><a href="/alternatives">At Binicilik</a><i class="fa fa-angle-right"></i></li>
+								<li><a href="/alternatives">Buz Pateni</a><i class="fa fa-angle-right"></i></li>
+								<li><a href="/alternatives">Daha Fazlası ...</a><i class="fa fa-angle-right"></i></li>
 							</ul>
 						</div><!--/col-md-3-->
 						<!-- End Link List -->
 
 						<!-- Link List -->
 						<div class="col-md-3 md-margin-bottom-40">
-							<div class="headline"><h2>Tours</h2></div>
+							<div class="headline"><h2>BOSNA TURLARI</h2></div>
 							<ul class="list-unstyled link-list">
-								<li><a href="#">Montenegro</a><i class="fa fa-angle-right"></i></li>
-								<li><a href="#">Macedonia</a><i class="fa fa-angle-right"></i></li>
-								<li><a href="#">England</a><i class="fa fa-angle-right"></i></li>
-								<li><a href="#">Spain</a><i class="fa fa-angle-right"></i></li>
-								<li><a href="#">Turkey</a><i class="fa fa-angle-right"></i></li>
-								<li><a href="#">Italy</a><i class="fa fa-angle-right"></i></li>
+								<li><a href="/bosnia-tours">Saraybosna</a><i class="fa fa-angle-right"></i></li>
+								<li><a href="/bosnia-tours">Saraybosna-Mostar</a><i class="fa fa-angle-right"></i></li>
+								<li><a href="/bosnia-tours">Saraybosna-Mostar-Travnik</a><i class="fa fa-angle-right"></i></li>
+								<li><a href="/bosnia-tours">Saraybosna-Mostar-Travnik-Vişegrad</a><i class="fa fa-angle-right"></i></li>
+								<li><a href="/bosnia-tours">Saraybosna-Mostar-Travnik-Jajce-Vişegrad</a><i class="fa fa-angle-right"></i></li>
 							</ul>
 						</div><!--/col-md-3-->
 						<!-- End Link List -->
 
-						<!-- Address -->
-						<div class="col-md-3 map-img md-margin-bottom-40">
-							<div class="headline"><h2>Contact Us</h2></div>
-							<address class="md-margin-bottom-40">
-								Pijacna br. 8, Sarajevo <br />
-								71000, Bosnia and Herzegovina <br />
-								Phone: +387-33-123 456 <br />
-								Fax: +387-33-123 456 <br />
-								Email: <a href="mailto:info@anybiz.com" class="">info@brighttravel.tours</a>
-							</address>
+						<!-- Link List -->
+						<div class="col-md-3 md-margin-bottom-40">
+							<div class="headline"><h2>BALKAN TURLARI</h2></div>
+							<ul class="list-unstyled link-list">
+								<li><a href="/balkan-tours">BOSNA HERSEK-SIRBİSTAN</a><i class="fa fa-angle-right"></i></li>
+								<li><a href="/balkan-tours">BOSNA HERSEK-KARADAĞ</a><i class="fa fa-angle-right"></i></li>
+								<li><a href="/balkan-tours">BOSNA HERSEK-KARADAĞ-KOSOVA-MAKEDONYA</a><i class="fa fa-angle-right"></i></li>
+								<li><a href="/balkan-tours">BOSNA HERSEK-KARADAĞ-ARNAVUTLUK</a><i class="fa fa-angle-right"></i></li>
+								<li><a href="/balkan-tours">HIRVATİSTAN-KARADAĞ</a><i class="fa fa-angle-right"></i></li>
+							</ul>
 						</div><!--/col-md-3-->
-						<!-- End Address -->
+						<!-- End Link List -->
 					</div>
 				</div>
 			</div><!--/footer-->
