--- a/templates/bosniatours.html
+++ b/templates/bosniatours.html
@@ -550,6 +550,8 @@
 		</div><!--/container-->
 		<!--=== End Content Part ===-->
 
+
+
 		<!--=== Footer Version 1 ===-->
 		<div class="footer-v1">
 			<div class="footer">
@@ -558,49 +560,49 @@
 						<!-- About -->
 						<div class="col-md-3 md-margin-bottom-40">
 							<a href="/"><img id="logo-footer" class="footer-logo" src="{% static "img/logo2-default.png"%}" alt=""></a>
-							<p>Bright Travel is always looking for ways to satisfy its customers</p>
+							<h4>BRIGHT TOURS</h4>
+							<p>Size Bosna Hersek ve Balkanlarda en güzel tatili geçirmenizi sağlayacağız.</p>
 						</div><!--/col-md-3-->
 						<!-- End About -->
 
 						<!-- Link List -->
 						<div class="col-md-3 md-margin-bottom-40">
-							<div class="headline"><h2>Alternatives</h2></div>
+							<div class="headline"><h2>ALTERNATİF TURLAR</h2></div>
 							<ul class="list-unstyled link-list">
-								<li><a href="#">Rafting</a><i class="fa fa-angle-right"></i></li>
-								<li><a href="#">Skiing</a><i class="fa fa-angle-right"></i></li>
-								<li><a href="#">Pyramids Tour</a><i class="fa fa-angle-right"></i></li>
-								<li><a href="#">Rent a Car</a><i class="fa fa-angle-right"></i></li>
-								<li><a href="#">Horseback Riding</a><i class="fa fa-angle-right"></i></li>
+								<li><a href="/alternatives">Rafting</a><i class="fa fa-angle-right"></i></li>
+								<li><a href="/alternatives">Kayak</a><i class="fa fa-angle-right"></i></li>
+								<li><a href="/alternatives">At Binicilik</a><i class="fa fa-angle-right"></i></li>
+								<li><a href="/alternatives">Buz Pateni</a><i class="fa fa-angle-right"></i></li>
+								<li><a href="/alternatives">Daha Fazlası ...</a><i class="fa fa-angle-right"></i></li>
 							</ul>
 						</div><!--/col-md-3-->
 						<!-- End Link List -->
 
 						<!-- Link List -->
 						<div class="col-md-3 md-margin-bottom-40">
-							<div class="headline"><h2>Tours</h2></div>
+							<div class="headline"><h2>BOSNA TURLARI</h2></div>
 							<ul class="list-unstyled link-list">
-								<li><a href="#">Montenegro</a><i class="fa fa-angle-right"></i></li>
-								<li><a href="#">Macedonia</a><i class="fa fa-angle-right"></i></li>
-								<li><a href="#">England</a><i class="fa fa-angle-right"></i></li>
-								<li><a href="#">Spain</a><i class="fa fa-angle-right"></i></li>
-								<li><a href="#">Turkey</a><i class="fa fa-angle-right"></i></li>
-								<li><a href="#">Italy</a><i class="fa fa-angle-right"></i></li>
+								<li><a href="/bosnia-tours">Saraybosna</a><i class="fa fa-angle-right"></i></li>
+								<li><a href="/bosnia-tours">Saraybosna-Mostar</a><i class="fa fa-angle-right"></i></li>
+								<li><a href="/bosnia-tours">Saraybosna-Mostar-Travnik</a><i class="fa fa-angle-right"></i></li>
+								<li><a href="/bosnia-tours">Saraybosna-Mostar-Travnik-Vişegrad</a><i class="fa fa-angle-right"></i></li>
+								<li><a href="/bosnia-tours">Saraybosna-Mostar-Travnik-Jajce-Vişegrad</a><i class="fa fa-angle-right"></i></li>
 							</ul>
 						</div><!--/col-md-3-->
 						<!-- End Link List -->
 
-						<!-- Address -->
-						<div class="col-md-3 map-img md-margin-bottom-40">
-							<div class="headline"><h2>Contact Us</h2></div>
-							<address class="md-margin-bottom-40">
-								Pijacna br. 8, Sarajevo <br />
-								71000, Bosnia and Herzegovina <br />
-								Phone: +387-33-123 456 <br />
-								Fax: +387-33-123 456 <br />
-								Email: <a href="mailto:info@anybiz.com" class="">info@brighttravel.tours</a>
-							</address>
+						<!-- Link List -->
+						<div class="col-md-3 md-margin-bottom-40">
+							<div class="headline"><h2>BALKAN TURLARI</h2></div>
+							<ul class="list-unstyled link-list">
+								<li><a href="/balkan-tours">BOSNA HERSEK-SIRBİSTAN</a><i class="fa fa-angle-right"></i></li>
+								<li><a href="/balkan-tours">BOSNA HERSEK-KARADAĞ</a><i class="fa fa-angle-right"></i></li>
+								<li><a href="/balkan-tours">BOSNA HERSEK-KARADAĞ-KOSOVA-MAKEDONYA</a><i class="fa fa-angle-right"></i></li>
+								<li><a href="/balkan-tours">BOSNA HERSEK-KARADAĞ-ARNAVUTLUK</a><i class="fa fa-angle-right"></i></li>
+								<li><a href="/balkan-tours">HIRVATİSTAN-KARADAĞ</a><i class="fa fa-angle-right"></i></li>
+							</ul>
 						</div><!--/col-md-3-->
-						<!-- End Address -->
+						<!-- End Link List -->
 					</div>
 				</div>
 			</div><!--/footer-->
