--- a/templates/contact.html
+++ b/templates/contact.html
@@ -127,11 +127,11 @@
 					<div id="map" class="map map-box map-box-space margin-bottom-40"></div>
 					<!-- End Google Map -->
 
-					<p>At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium voluptatum deleniti atque corrupti quos dolores et quas feugiat. Et harum quidem rerum facilis est et expedita distinctio lorem ipsum dolor sit amet, consectetur adipiscing elit landitiis.</p><br />
+					<p>Bize emaille, telefonla yada aşağıdaki formu doldurarak ulaşabilirsiniz. </p><br />
 
 					<form action="{% static "php/sky-forms-pro/demo-contacts-process.php" method="post" id="sky-form3" class="sky-form contact-style">
 						<fieldset class="no-padding">
-							<label>Name <span class="color-red">*</span></label>
+							<label>İsim Soyisim <span class="color-red">*</span></label>
 							<div class="row sky-space-20">
 								<div class="col-md-7 col-md-offset-0">
 									<div>
@@ -149,7 +149,16 @@
 								</div>
 							</div>
 
-							<label>Message <span class="color-red">*</span></label>
+							<label>Telefon <span class="color-red">*</span></label>
+							<div class="row sky-space-20">
+								<div class="col-md-7 col-md-offset-0">
+									<div>
+										<input type="text" name="telefon" id="telefon" class="form-control">
+									</div>
+								</div>
+							</div>
+
+							<label>Mesaj <span class="color-red">*</span></label>
 							<div class="row sky-space-20">
 								<div class="col-md-11 col-md-offset-0">
 									<div>
@@ -158,19 +167,19 @@
 								</div>
 							</div>
 
-							<p><button type="submit" class="btn-u">Send Message</button></p>
+							<p><button type="submit" class="btn-u">GÖNDER</button></p>
 						</fieldset>
 
 						<div class="message">
 							<i class="rounded-x fa fa-check"></i>
-							<p>Your message was successfully sent!</p>
+							<p>Mesajınız başarıyla gönderilmiştir.</p>
 						</div>
 					</form>
 				</div><!--/col-md-9-->
 
 				<div class="col-md-3">
 					<!-- Contacts -->
-					<div class="headline"><h2>Contacts</h2></div>
+					<div class="headline"><h2>İletişim</h2></div>
 					<ul class="list-unstyled who margin-bottom-30">
 						<li><a href="#"><i class="fa fa-home"></i>Pijacna br. 8, Sarajevo <br />
 								71000, Bosnia and Herzegovina <br</a></li>
@@ -180,20 +189,19 @@
 					</ul>
 
 					<!-- Business Hours -->
-					<div class="headline"><h2>Business Hours</h2></div>
+					<div class="headline"><h2>Çalışma Saatleri</h2></div>
 					<ul class="list-unstyled margin-bottom-30">
-						<li><strong>Monday-Friday:</strong> 9am to 6pm</li>
-						<li><strong>Saturday:</strong> 9am to 3pm</li>
-						<li><strong>Sunday:</strong> Closed</li>
+						<li><strong>Pazartesi-Cuma:</strong> 9am to 6pm</li>
+						<li><strong>Cumartesi:</strong> 9am to 3pm</li>
+						<li><strong>Pazar:</strong> Kapalı</li>
 					</ul>
 
 					<!-- Why we are? -->
-					<div class="headline"><h2>Why we are?</h2></div>
-					<p>At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium voluptatum.</p>
+					<div class="headline"><h2>Neden Biz?</h2></div>
+					<p>Uzun yıllardır Bosna Hersek ve Balkan turları düzenlemekteyiz.</p>
 					<ul class="list-unstyled">
-						<li><i class="fa fa-check color-green"></i> Odio dignissimos ducimus</li>
-						<li><i class="fa fa-check color-green"></i> Blanditiis praesentium volup</li>
-						<li><i class="fa fa-check color-green"></i> Eos et accusamus</li>
+						<li><i class="fa fa-check color-green"></i> Uzun Yılların Tecrübesi</li>
+						<li><i class="fa fa-check color-green"></i> Deneyimli rehberler</li>
 					</ul>
 				</div><!--/col-md-3-->
 			</div><!--/row-->
@@ -245,46 +253,46 @@
 						<!-- About -->
 						<div class="col-md-3 md-margin-bottom-40">
 							<a href="/"><img id="logo-footer" class="footer-logo" src="{% static "img/logo2-default.png"%}" alt=""></a>
-							<p>Bright Travel is always looking for ways to satisfy its customers</p>
+							<h4>BRIGHT TOURS</h4>
+							<p>Size Bosna Hersek ve Balkanlarda en güzel tatili geçirmenizi sağlayacağız.</p>
 						</div><!--/col-md-3-->
 						<!-- End About -->
 
 						<!-- Link List -->
 						<div class="col-md-3 md-margin-bottom-40">
-							<div class="headline"><h2>Alternatives</h2></div>
+							<div class="headline"><h2>ALTERNATİF TURLAR</h2></div>
 							<ul class="list-unstyled link-list">
-								<li><a href="#">Rafting</a><i class="fa fa-angle-right"></i></li>
-								<li><a href="#">Skiing</a><i class="fa fa-angle-right"></i></li>
-								<li><a href="#">Pyramids Tour</a><i class="fa fa-angle-right"></i></li>
-								<li><a href="#">Rent a Car</a><i class="fa fa-angle-right"></i></li>
-								<li><a href="#">Horseback Riding</a><i class="fa fa-angle-right"></i></li>
+								<li><a href="/alternatives">Rafting</a><i class="fa fa-angle-right"></i></li>
+								<li><a href="/alternatives">Kayak</a><i class="fa fa-angle-right"></i></li>
+								<li><a href="/alternatives">At Binicilik</a><i class="fa fa-angle-right"></i></li>
+								<li><a href="/alternatives">Buz Pateni</a><i class="fa fa-angle-right"></i></li>
+								<li><a href="/alternatives">Daha Fazlası ...</a><i class="fa fa-angle-right"></i></li>
 							</ul>
 						</div><!--/col-md-3-->
 						<!-- End Link List -->
 
 						<!-- Link List -->
 						<div class="col-md-3 md-margin-bottom-40">
-							<div class="headline"><h2>Tours</h2></div>
+							<div class="headline"><h2>BOSNA TURLARI</h2></div>
 							<ul class="list-unstyled link-list">
-								<li><a href="#">Montenegro</a><i class="fa fa-angle-right"></i></li>
-								<li><a href="#">Macedonia</a><i class="fa fa-angle-right"></i></li>
-								<li><a href="#">England</a><i class="fa fa-angle-right"></i></li>
-								<li><a href="#">Spain</a><i class="fa fa-angle-right"></i></li>
-								<li><a href="#">Turkey</a><i class="fa fa-angle-right"></i></li>
-								<li><a href="#">Italy</a><i class="fa fa-angle-right"></i></li>
+								<li><a href="/bosnia-tours">Saraybosna</a><i class="fa fa-angle-right"></i></li>
+								<li><a href="/bosnia-tours">Saraybosna-Mostar</a><i class="fa fa-angle-right"></i></li>
+								<li><a href="/bosnia-tours">Saraybosna-Mostar-Travnik</a><i class="fa fa-angle-right"></i></li>
+								<li><a href="/bosnia-tours">Saraybosna-Mostar-Travnik-Vişegrad</a><i class="fa fa-angle-right"></i></li>
+								<li><a href="/bosnia-tours">Saraybosna-Mostar-Travnik-Jajce-Vişegrad</a><i class="fa fa-angle-right"></i></li>
 							</ul>
 						</div><!--/col-md-3-->
 						<!-- End Link List -->
 
 						<!-- Link List -->
 						<div class="col-md-3 md-margin-bottom-40">
-							<div class="headline"><h2>Cities</h2></div>
+							<div class="headline"><h2>BALKAN TURLARI</h2></div>
 							<ul class="list-unstyled link-list">
-								<li><a href="#">Sarajevo</a><i class="fa fa-angle-right"></i></li>
-								<li><a href="#">Mostar</a><i class="fa fa-angle-right"></i></li>
-								<li><a href="#">Travnik</a><i class="fa fa-angle-right"></i></li>
-								<li><a href="#">Jajce</a><i class="fa fa-angle-right"></i></li>
-								<li><a href="#">Visegrad</a><i class="fa fa-angle-right"></i></li>
+								<li><a href="/balkan-tours">BOSNA HERSEK-SIRBİSTAN</a><i class="fa fa-angle-right"></i></li>
+								<li><a href="/balkan-tours">BOSNA HERSEK-KARADAĞ</a><i class="fa fa-angle-right"></i></li>
+								<li><a href="/balkan-tours">BOSNA HERSEK-KARADAĞ-KOSOVA-MAKEDONYA</a><i class="fa fa-angle-right"></i></li>
+								<li><a href="/balkan-tours">BOSNA HERSEK-KARADAĞ-ARNAVUTLUK</a><i class="fa fa-angle-right"></i></li>
+								<li><a href="/balkan-tours">HIRVATİSTAN-KARADAĞ</a><i class="fa fa-angle-right"></i></li>
 							</ul>
 						</div><!--/col-md-3-->
 						<!-- End Link List -->
