--- a/templates/homeen2.html
+++ b/templates/homeen2.html
@@ -27,22 +27,22 @@
 				<div class="menu-container">
 					<ul class="nav navbar-nav">
 						<li class="page-scroll">
-							<a href="/bosnia-tours"><span data-hover="Bosnia Tours">BOSNA TURLARI</span></a>
+							<a href="/bosnia-tours"><span data-hover="BOSNA TURLARI">BOSNA TURLARI</span></a>
 						</li>
 						<li class="page-scroll">
-							<a href="/balkan-tours"><span data-hover="Balkan Tours">BALKAN TURLARI</span></a>
+							<a href="/balkan-tours"><span data-hover="BALKAN TURLARI">BALKAN TURLARI</span></a>
 						</li>
 						<li class="page-scroll">
-							<a href="/alternatives"><span data-hover="Alternatives">ALTERNATIF TURLAR</span></a>
+							<a href="/alternatives"><span data-hover="ALTERNATIF TURLAR">ALTERNATİF TURLAR</span></a>
 						</li>
 						<li class="page-scroll">
-							<a href="/cities"><span data-hover="Cities">ŞEHİRLER</span></a>
+							<a href="/cities"><span data-hover="ŞEHİRLER">ŞEHİRLER</span></a>
 						</li>
 						<li class="page-scroll">
-							<a href="/rentacar"><span data-hover="Rent A Car">ARABA KİRALAMA</span></a>
+							<a href="/rentacar"><span data-hover="ARAÇ KİRALAMA">ARAÇ KİRALAMA</span></a>
 						</li>
 						<li class="page-scroll">
-							<a href="/contact"><span data-hover="Contact">İLETİŞİM</span></a>
+							<a href="/contact"><span data-hover="İLETİŞİM">İLETİŞİM</span></a>
 						</li>
 					</ul>
 				</div>
@@ -113,9 +113,9 @@
 			<div class="ms-layer ms-promo-travel-price hidden-xs" style="left: 15px; top: 182px; opacity: 1;" data-type="text" data-delay="10" data-effect="skewleft(50,340)" data-ease="easeOutExpo" data-duration="2200">
 				<strong>€50.00</strong>'den itibaren
 			</div>
-			<h4 class="ms-layer ms-promo-travel-place hidden-3xs" style="left: 11px; top: 256px;" data-type="text" data-delay="10" data-effect="skewright(50,340)" data-ease="easeOutExpo" data-duration="2200">
+			<h3 class="ms-layer ms-promo-travel-place hidden-3xs" line-height="50px" style="left: 11px; top: 256px;" data-type="text" data-delay="10" data-effect="skewright(50,340)" data-ease="easeOutExpo" data-duration="2200">
 				BOSNA HERSEK - KOSOVA - MAKEDONYA
-			</h4>
+			</h3>
 			<div class="ms-layer ms-promo-travel-description" style="left: 15px; top: 324px;" data-type="text" data-delay="30" data-effect="rotate3dbottom(100,0,0,70)" data-ease="easeOutExpo" data-duration="2300">
 				<p class="g-mb-20 hidden-sm hidden-xs">Unutamayacağınız bir tatil</p>
 				<p><a href="/bosnia-tours" class="btn-u btn-u-lg btn-u-red btn-u-upper">Ayrıntılar<span class="visible-3xs"> to Langkawi, Malaysia</span></a></p>
@@ -178,49 +178,29 @@
 	<!-- End Promo Section -->
 
 	<!-- Search Tours Section -->
+	<!--
 	<div class="search-tours g-heading-v8">
 		<div class="container">
 			<div class="row">
 				<div class="col-md-3 search-tours-title-wrapper">
 					<div class="container">
-						<h2><em class="block-name">Book Information</em><br> Tour's search</h2>
+						<h2>Tur<br>Bilgileri</h2>
 					</div>
 				</div>
 				<div class="col-md-9 search-tours-col-bg-default">
 					<div class="container">
 						<form action="#" class="sky-form clearfix">
-							<div class="col col-3">
-								<label class="label">Destination</label>
-								<label class="select">
-									<select>
-										<option value="0" selected>Reservation date</option>
-										<option value="1"></option>
-										<option value="2"></option>
-										<option value="3"></option>
-										<option value="4"></option>
-									</select>
-									<i></i>
-								</label>
+							<div class="col col-3 g-pb-40">
+								<button type="submit" class="btn-u btn-u-lg btn-u-upper">Bosna Turlari</button>
 							</div>
-
-							<div class="col col-3">
-								<label class="label">Date</label>
-								<label class="input">
-									<span class="icon-append fa fa-calendar"></span>
-									<input type="text" name="start" id="start" placeholder="DD/MM/YYY">
-								</label>
+							<div class="col col-3 g-pb-40">
+								<button type="submit" class="btn-u btn-u-lg btn-u-upper">Balkan Turlari</button>
 							</div>
-
-							<div class="col col-3">
-								<label class="label">Persons</label>
-								<label class="input">
-									<span class="icon-append fa fa-users"></span>
-									<input type="text" placeholder="Number of persons">
-								</label>
+							<div class="col col-3 g-pb-40">
+								<button type="submit" class="btn-u btn-u-lg btn-u-upper">Alternatif Turlar</button>
 							</div>
-
-							<div class="col col-3">
-								<button type="submit" class="btn-u btn-u-lg btn-u-upper">Search</button>
+							<div class="col col-3 g-pb-40">
+								<button type="submit" class="btn-u btn-u-lg btn-u-upper">Araç Kiralama</button>
 							</div>
 						</form>
 					</div>
@@ -228,77 +208,75 @@
 			</div>
 		</div>
 	</div>
+	-->
 	<!-- End Search Tours Section -->
 
 	<!-- Bosnia Tours Section -->
+	<!--
 	<div class="our-tours text-center g-heading-v8 g-pt-85 g-pb-100" id="Our-Tours">
 		<div class="container-fluid">
-			<h2 class="h2"> <strong>Bosna Hersek</strong> paketlerimiz</h2>
+			<h2 class="h2"> <strong>Bosna Hersek</strong> turları</h2>
 			<div class="our-tours-list-wrapper">
 				<div class="our-tours-list text-left">
 
-					<!-- Item 5 -->
 					<div class="our-tours-list-item">
 						<div class="img-wrapper img-wrapper--shadow"><img src="{% static "img-temp/bosniatours/thumbs/sarajevosebil3.jpg"%}" alt="ALT" class="img-reposnsive"></div>
 						<h3>Sarajevo</h3>
 						<div class="our-tours-price">€350.00</div>
 						<a href="/bosnia-tours" class="our-tours-list-item__more">More</a>
 					</div>
-					<!-- End Item 5 -->
 
-					<!-- Item 5 -->
 					<div class="our-tours-list-item">
 						<div class="img-wrapper img-wrapper--shadow"><img src="{% static "img-temp/bosniatours/thumbs/mostarbridge2.jpg"%}" alt="ALT" class="img-reposnsive"></div>
 						<h3>Mostar</h3>
 						<div class="our-tours-price">€350.00</div>
 						<a href="/bosnia-tours" class="our-tours-list-item__more">More</a>
 					</div>
-					<!-- End Item 5 -->
 
-					<!-- Item 2 -->
 					<div class="our-tours-list-item">
 						<div class="img-wrapper img-wrapper--shadow"><img src="{% static "img-temp/bosniatours/thumbs/travnik.jpg"%}" alt="ALT" class="img-reposnsive"></div>
 						<h3>Travnik</h3>
 						<div class="our-tours-price">€350.00</div>
 						<a href="/bosnia-tours" class="our-tours-list-item__more">More</a>
 					</div>
-					<!-- End Item 2 -->
 
-					<!-- Item 3 -->
 					<div class="our-tours-list-item">
 						<div class="img-wrapper img-wrapper--shadow"><img src="{% static "img-temp/bosniatours/thumbs/visegrad.jpg"%}" alt="ALT" class="img-reposnsive"></div>
 						<h3>Vişegrad</h3>
 						<div class="our-tours-price">€350.00</div>
 						<a href="/bosnia-tours" class="our-tours-list-item__more">More</a>
 					</div>
-					<!-- End Item 3 -->
 
-					<!-- Item 4 -->
 					<div class="our-tours-list-item">
 						<div class="img-wrapper img-wrapper--shadow"><img src="{% static "img-temp/bosniatours/thumbs/jajce.jpg"%}" alt="ALT" class="img-reposnsive"></div>
 						<h3>Jajce</h3>
 						<div class="our-tours-price">€350.00</div>
 						<a href="/bosnia-tours" class="our-tours-list-item__more">More</a>
 					</div>
-					<!-- End Item 4 -->
 
-					<!-- Item 5 -->
 					<div class="our-tours-list-item">
 						<div class="img-wrapper img-wrapper--shadow"><img src="{% static "img-temp/bosniatours/thumbs/srebrenica.jpg"%}" alt="ALT" class="img-reposnsive"></div>
 						<h3>Srebrenitsa</h3>
 						<div class="our-tours-price">€350.00</div>
 						<a href="/bosnia-tours" class="our-tours-list-item__more">More</a>
 					</div>
-					<!-- End Item 5 -->
 				</div>
 			</div>
 		</div>
 	</div>
+	-->
 	<!-- End Bosnia Tours Section -->
 
 	<!-- Bosna Tours 2 Section -->
-	<div class="popular-tours text-center g-heading-v8 g-pt-40 g-pb-40" id="Popular-Tours">
+	<div class="popular-tours text-center g-heading-v8 g-pt-40 g-pb-20" id="Popular-Tours">
 		<div class="container">
+			<h2 class="h2"> <strong>Bosna Hersek</strong> turları</h2>
+			<div class="row">
+				<div class="col-sm-8 col-sm-offset-2">
+					<p class="g-mb-40">Bosna Hersekte geçireceğiniz tatilinizi turlarımızdan birine katılarak daha eğlenceli bir hale dönüştürebilirsiniz.</p>
+				</div>
+			</div>
+
 			<div class="row text-left">
 
 				<!-- Item 3 -->
@@ -402,13 +380,18 @@
 	<!-- End Bosnia Tours2 Section -->
 
 	<!-- Balkan Tours Section -->
-	<div class="special-purposes text-center g-heading-v8  g-pb-40" id="Purposes">
+	<div class="special-purposes text-center g-heading-v8  g-pb-20" id="Purposes">
 		<div class="container">
 			<div class="row g-mb-20">
 				<div class="col-sm-8 col-sm-offset-2">
-					<h2 class="h2"><br> <strong>Balkan</strong> Turları</h2>
-				</div>
-			</div>
+					<h2 class="h2"><strong>Balkan</strong> Turları</h2>
+					<div class="row">
+						<div class="col-sm-8 col-sm-offset-2">
+							<p class="g-mb-40">Balkanlarda geçireceğiniz tatilinizi turlarımızdan birine katılarak daha eğlenceli bir hale dönüştürebilirsiniz.</p>
+						</div>
+					</div>
+						</div>
+					</div>
 			<div class="row">
 				<!-- Col 1 -->
 				<div class="col-md-6">
@@ -480,36 +463,6 @@
 	</div>
 	<!-- End Balkan Tours Section -->
 
-	<!-- Discount Section -->
-	<!--
-	<div class="get-discount text-center g-heading-v8" id="Subscribe">
-		<div class="container">
-			<h2><strong>Get 10%</strong> discount</h2>
-			<div class="row">
-				<div class="col-sm-8 col-sm-offset-2">
-					<p class="g-mb-65">Donec eleifend mauris eu leo varius consectetur. Aliquam luctus a lorem ac rutrum. Cras in nulla id mi ornare vestibulum. Donec et magna nulla. Pellentesque ut ipsum id nibh pretium blandit quis ac erat.</p>
-					<form action="#" class="sky-form">
-						<div class="row">
-							<div class="col-sm-6 g-mb-20">
-								<label class="input">
-									<input type="text" placeholder="Your name">
-								</label>
-							</div>
-							<div class="col-sm-6 g-mb-20">
-								<label class="input">
-									<input type="text" placeholder="Your email">
-								</label>
-							</div>
-						</div>
-						<button class="btn-u btn-u-lg btn-u-red btn-u-upper" type="submit">Send Message</button>
-					</form>
-				</div>
-			</div>
-		</div>
-	</div>
-	-->
-	<!-- End Discount Section -->
-
 	<!-- Alternatives -->
 	<div class="our-service-section text-center g-heading-v8 equal-height-columns" id="Services">
 		<div class="container-fluid">
@@ -525,27 +478,24 @@
 					<div class="our-services-list">
 						<!-- Item 1 -->
 						<div class="our-services-list-item equal-height-column">
-							<div class="img-wrapper img-wrapper--shadow"><img src="{% static "img-temp/alternatives/thumbs/skiing.jpg"%}" alt="ALT" class="img-reposnsive"></div>
+							<div class="img-wrapper img-wrapper--shadow"><img src="{% static "img-temp/alternatives/thumbs/kayak.jpg"%}" alt="ALT" class="img-reposnsive"></div>
 							<h3>Kayak</h3>
-							<p>Bosna Hersek Bjelesnica, Jahorina, Velaşiç başta olmak üzere dünya standartlarında kayak merkezlerine sahiptir.<p>
 							<a href="/alternatives" class="btn-u btn-u-lg btn-u-red btn-u-upper">Ayrıntılar</a>
 						</div>
 						<!-- End Item 1 -->
 
 						<!-- Item 2 -->
 						<div class="our-services-list-item equal-height-column">
-							<div class="img-wrapper img-wrapper--shadow"><img src="{% static "img-temp/alternatives/thumbs/horsebackriding.jpg"%}" alt="ALT" class="img-reposnsive"></div>
+							<div class="img-wrapper img-wrapper--shadow"><img src="{% static "img-temp/alternatives/thumbs/atbinicilik.jpg"%}" alt="ALT" class="img-reposnsive"></div>
 							<h3>Ata Binme</h3>
-							<p></p>
 							<a href="/alternatives" class="btn-u btn-u-lg btn-u-red btn-u-upper">Ayrıntılar</a>
 						</div>
 						<!-- End Item 2 -->
 
 						<!-- Item 3 -->
 						<div class="our-services-list-item equal-height-column">
-							<div class="img-wrapper img-wrapper--shadow"><img src="{% static "img-temp/alternatives/thumbs/pyramid.jpg"%}" alt="ALT" class="img-reposnsive"></div>
+							<div class="img-wrapper img-wrapper--shadow"><img src="{% static "img-temp/alternatives/thumbs/piramit.jpg"%}" alt="ALT" class="img-reposnsive"></div>
 							<h3>Bosna Piramidleri</h3>
-							<p>Yakın zamanda keşfedilmiş Bosna piramidlerini ziyaret etmeyi unutmayın.</p>
 							<a href="/alternatives" class="btn-u btn-u-lg btn-u-red btn-u-upper">Ayrıntılar</a>
 						</div>
 						<!-- End Item 3 -->
@@ -554,25 +504,22 @@
 						<div class="our-services-list-item equal-height-column">
 							<div class="img-wrapper img-wrapper--shadow"><img src="{% static "img-temp/alternatives/thumbs/rafting.jpg"%}" alt="ALT" class="img-reposnsive"></div>
 							<h3>Rafting</h3>
-							<p>Dostlarınızla rafting keyfini Bosna Hersekte çıkarın.</p>
 							<a href="/alternatives" class="btn-u btn-u-lg btn-u-red btn-u-upper">Ayrıntılar</a>
 						</div>
 						<!-- End Item 4 -->
 
 						<!-- Item 6 -->
 						<div class="our-services-list-item equal-height-column">
-							<div class="img-wrapper img-wrapper--shadow"><img src="{% static "img-temp/alternatives/thumbs/parachute.jpg"%}" alt="ALT" class="img-reposnsive"></div>
+							<div class="img-wrapper img-wrapper--shadow"><img src="{% static "img-temp/alternatives/thumbs/yamacparasutu.jpg"%}" alt="ALT" class="img-reposnsive"></div>
 							<h3>Dil Kursları</h3>
-							<p>Tatilinizi yeni bir dil öğrenerek geçirebilirsiniz.</p>
 							<a href="/alternatives" class="btn-u btn-u-lg btn-u-red btn-u-upper">Ayrıntılar</a>
 						</div>
 						<!-- End Item 6 -->
 
 						<!-- Item 6 -->
 						<div class="our-services-list-item equal-height-column">
-							<div class="img-wrapper img-wrapper--shadow"><img src="{% static "img-temp/alternatives/thumbs/banker.jpg"%}" alt="ALT" class="img-reposnsive"></div>
+							<div class="img-wrapper img-wrapper--shadow"><img src="{% static "img-temp/alternatives/thumbs/titonunsiginagi.jpg"%}" alt="ALT" class="img-reposnsive"></div>
 							<h3>Tito'nun Sığınağı</h3>
-							<p>Tito'nun yer altı sığınağıç</p>
 							<a href="/alternatives" class="btn-u btn-u-lg btn-u-red btn-u-upper">Ayrıntılar</a>
 						</div>
 						<!-- End Item 6 -->
@@ -582,101 +529,7 @@
 		</div>
 	</div>
 	<!-- End Alternatives -->
-
-	<!-- Gallery -->
-	<!--
-	<div class="gallery text-center g-heading-v8 g-pt-80" id="Gallery">
-		<!-- Gallery Info -->
-		<!--
-	    <div class="container">
-			<div class="row g-mb-70">
-				<div class="col-sm-8 col-sm-offset-2">
-					<h2 class="h2"><em class="block-name">Our Gallery</em><br> <strong>Interesting</strong> shots</h2>
-					<div>Sed feugiat porttitor nunc, non dignissim ipsum vestibulum in. Donec in blandit dolor. Vivamus a fringilla lorem, vel faucibus ante. Nunc ullamcorper, justo a iaculis elementum, enim orci viverra eros, fringilla porttitor lorem eros vel odio.</div>
-				</div>
-			</div>
-		</div>
-		<!-- End Gallery Info -->
-
-		<!-- Gallery: Photos -->
-		<!--
-		<div id="js-grid-full-width" class="cbp">
-			<!-- Item 1
-			<div class="cbp-item">
-				<a href="{% static "img-temp/cities/v12.jpg"%}" class="cbp-caption cbp-lightbox" data-title="Sed feugiat porttitor nunc<br>by Vivamus">
-					<div class="cbp-caption-defaultWrap img-wrapper--shadow">
-						<img src="{% static "img-temp/cities/v12.jpg"%}" alt="ALT">
-					</div>
-				</a>
-			</div>
-			<!-- End Item 1 -->
-
-			<!-- Item 2
-			<div class="cbp-item">
-				<a href="{% static "img-temp/cities/v6.jpg"%}" class="cbp-caption cbp-lightbox" data-title="Sed feugiat porttitor nunc<br>by Vivamus">
-					<div class="cbp-caption-defaultWrap img-wrapper--shadow">
-						<img src="{% static "img-temp/cities/v6.jpg"%}" alt="ALT">
-					</div>
-				</a>
-			</div>
-			<!-- End Item 2 -->
-
-			<!-- Item 3
-			<div class="cbp-item">
-				<a href="{% static "img-temp/cities/v5.JPG"%}" class="cbp-caption cbp-lightbox" data-title="Sed feugiat porttitor nunc<br>by Vivamus">
-					<div class="cbp-caption-defaultWrap img-wrapper--shadow">
-						<img src="{% static "img-temp/cities/v5.JPG"%}" alt="ALT">
-					</div>
-				</a>
-			</div>
-			<!-- End Item 3 -->
-
-			<!-- Item 4
-			<div class="cbp-item">
-				<a href="{% static "img-temp/cities/v2.jpg"%}" class="cbp-caption cbp-lightbox" data-title="Sed feugiat porttitor nunc<br>by Vivamus">
-					<div class="cbp-caption-defaultWrap img-wrapper--shadow">
-						<img src="{% static "img-temp/cities/v2.jpg"%}" alt="ALT">
-					</div>
-				</a>
-			</div>
-			<!-- End Item 4 -->
-
-			<!-- Item 5
-			<div class="cbp-item">
-				<a href="{% static "img-temp/cities/v2.jpg"%}" class="cbp-caption cbp-lightbox" data-title="Sed feugiat porttitor nunc<br>by Vivamus">
-					<div class="cbp-caption-defaultWrap img-wrapper--shadow">
-						<img src="{% static "img-temp/gallery/photo-1417551047620-471daaad5a65.jpg"%}" alt="ALT">
-					</div>
-				</a>
-			</div>
-			<!-- End Item 5 -->
-
-			<!-- Item 6
-			<div class="cbp-item">
-				<a href="{% static "img-temp/cities/v12.jpg"%}" class="cbp-caption cbp-lightbox" data-title="Sed feugiat porttitor nunc<br>by Vivamus">
-					<div class="cbp-caption-defaultWrap img-wrapper--shadow">
-						<img src="{% static "img-temp/cities/v12.jpg"%}" alt="ALT">
-					</div>
-				</a>
-			</div>
-			<!-- End Item 6 -->
-
-			<!-- Item 7
-			<div class="cbp-item">
-				<a href="{% static "img-temp/cities/v51.JPG"%}" class="cbp-caption cbp-lightbox" data-title="Sed feugiat porttitor nunc<br>by Vivamus">
-					<div class="cbp-caption-defaultWrap img-wrapper--shadow">
-						<img src="{% static "img-temp/cities/v51.JPG"%}" alt="ALT">
-					</div>
-				</a>
-			</div>
-			<!-- End Item 7 -->
-		</div>
-		<!-- End Gallery: Photos -->
-		<div id="js-loadMore-full-width" class="cbp-l-loadMore-text"><br></div>
-	</div>
-
-	<!-- End Gallery -->
-
+	<hr>
 	<!-- Contact Section -->
 	<div class="contact-section text-center g-heading-v8" id="Contact">
 		<div class="container-fluid">
@@ -722,7 +575,7 @@
 								<input type="text" placeholder="Konu" name="subject" id="subject">
 							</label>
 							<label class="textarea textarea-expandable g-mb-40">
-								<textarea rows="3" placeholder="Message" name="message" id="message"></textarea>
+								<textarea rows="3" placeholder="Mesaj" name="message" id="message"></textarea>
 							</label>
 							<button class="btn-u btn-u-lg btn-u-red btn-u-upper" type="submit">Gönder</button>
 						</fieldset>
